--- a/README
+++ b/README
@@ -7,3 +7,12 @@ Dependency
 ----------
 
 * [prowlpy](https://github.com/jacobb/prowlpy)
+
+
+Usage
+-----
+
+Change the `apikey` value at the end of the code to proper Prowl API key.
+It can be found at http://www.prowlapp.com/api.php
+
+Place the script under `.weechat/python` to load.
